src/streamlang/parser/StreamLangParser.py
# Generated from StreamLang.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class StreamLangParser ( Parser ):

    grammarFileName = "StreamLang.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "'return'", "'function'", "'let'", "'var'", 
                     "'if'", "'else'", "'while'", "'for'", "'break'", "'true'", 
                     "'false'", "'('", "')'", "'{'", "'}'", "'['", "']'", 
                     "','", "':'", "';'", "'->'", "'='", "'|>'", "'+'", 
                     "'-'", "'*'", "'/'", "'%'", "'!'", "'&&'", "'||'", 
                     "'=='", "'!='", "'<'", "'>'", "'<='", "'>='" ]

    symbolicNames = [ "<INVALID>", "<INVALID>", "FN", "LET", "VAR", "IF", 
                      "ELSE", "WHILE", "FOR", "BREAK", "TRUE", "FALSE", 
                      "LPAREN", "RPAREN", "LBRACE", "RBRACE", "LBRACK", 
                      "RBRACK", "COMMA", "COLON", "SEMI", "ARROW", "ASSIGN", 
                      "PIPE", "PLUS", "MINUS", "STAR", "SLASH", "MOD", "NOT", 
                      "AND", "OR", "EQ", "NEQ", "LT", "GT", "LTE", "GTE", 
                      "ID", "INT", "STRING", "WS", "COMMENT", "BLOCK_COMMENT" ]

    RULE_program = 0
    RULE_declaration = 1
    RULE_functionDecl = 2
    RULE_paramList = 3
    RULE_param = 4
    RULE_type = 5
    RULE_statement = 6
    RULE_ifExpr = 7
    RULE_returnStmt = 8
    RULE_breakStmt = 9
    RULE_varDecl = 10
    RULE_assignStmt = 11
    RULE_exprStmt = 12
    RULE_whileStmt = 13
    RULE_forStmt = 14
    RULE_block = 15
    RULE_expr = 16
    RULE_argList = 17
    RULE_exprList = 18

    ruleNames =  [ "program", "declaration", "functionDecl", "paramList", 
                   "param", "type", "statement", "ifExpr", "returnStmt", 
                   "breakStmt", "varDecl", "assignStmt", "exprStmt", "whileStmt", 
                   "forStmt", "block", "expr", "argList", "exprList" ]

    EOF = Token.EOF
    T__0=1
    FN=2
    LET=3
    VAR=4
    IF=5
    ELSE=6
    WHILE=7
    FOR=8
    BREAK=9
    TRUE=10
    FALSE=11
    LPAREN=12
    RPAREN=13
    LBRACE=14
    RBRACE=15
    LBRACK=16
    RBRACK=17
    COMMA=18
    COLON=19
    SEMI=20
    ARROW=21
    ASSIGN=22
    PIPE=23
    PLUS=24
    MINUS=25
    STAR=26
    SLASH=27
    MOD=28
    NOT=29
    AND=30
    OR=31
    EQ=32
    NEQ=33
    LT=34
    GT=35
    LTE=36
    GTE=37
    ID=38
    INT=39
    STRING=40
    WS=41
    COMMENT=42
    BLOCK_COMMENT=43

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class ProgramContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(StreamLangParser.EOF, 0)

        def declaration(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StreamLangParser.DeclarationContext)
            else:
                return self.getTypedRuleContext(StreamLangParser.DeclarationContext,i)


        def getRuleIndex(self):
            return StreamLangParser.RULE_program

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterProgram" ):
                listener.enterProgram(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitProgram" ):
                listener.exitProgram(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitProgram" ):
                return visitor.visitProgram(self)
            else:
                return visitor.visitChildren(self)




    def program(self):

        localctx = StreamLangParser.ProgramContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_program)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 41
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 1924715863998) != 0):
                self.state = 38
                self.declaration()
                self.state = 43
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 44
            self.match(StreamLangParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class DeclarationContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def functionDecl(self):
            return self.getTypedRuleContext(StreamLangParser.FunctionDeclContext,0)


        def statement(self):
            return self.getTypedRuleContext(StreamLangParser.StatementContext,0)


        def getRuleIndex(self):
            return StreamLangParser.RULE_declaration

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterDeclaration" ):
                listener.enterDeclaration(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitDeclaration" ):
                listener.exitDeclaration(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitDeclaration" ):
                return visitor.visitDeclaration(self)
            else:
                return visitor.visitChildren(self)




    def declaration(self):

        localctx = StreamLangParser.DeclarationContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_declaration)
        try:
            self.state = 48
            self._errHandler.sync(self)
            token = self._input.LA(1)
            if token in [2]:
                self.enterOuterAlt(localctx, 1)
                self.state = 46
                self.functionDecl()
                pass
            elif token in [1, 3, 4, 5, 7, 8, 9, 10, 11, 12, 14, 16, 25, 29, 38, 39, 40]:
                self.enterOuterAlt(localctx, 2)
                self.state = 47
                self.statement()
                pass
            else:
                raise NoViableAltException(self)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class FunctionDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FN(self):
            return self.getToken(StreamLangParser.FN, 0)

        def ID(self):
            return self.getToken(StreamLangParser.ID, 0)

        def LPAREN(self):
            return self.getToken(StreamLangParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(StreamLangParser.RPAREN, 0)

        def ARROW(self):
            return self.getToken(StreamLangParser.ARROW, 0)

        def type_(self):
            return self.getTypedRuleContext(StreamLangParser.TypeContext,0)


        def block(self):
            return self.getTypedRuleContext(StreamLangParser.BlockContext,0)


        def paramList(self):
            return self.getTypedRuleContext(StreamLangParser.ParamListContext,0)


        def getRuleIndex(self):
            return StreamLangParser.RULE_functionDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterFunctionDecl" ):
                listener.enterFunctionDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitFunctionDecl" ):
                listener.exitFunctionDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFunctionDecl" ):
                return visitor.visitFunctionDecl(self)
            else:
                return visitor.visitChildren(self)




    def functionDecl(self):

        localctx = StreamLangParser.FunctionDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_functionDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(StreamLangParser.FN)
            self.state = 51
            self.match(StreamLangParser.ID)
            self.state = 52
            self.match(StreamLangParser.LPAREN)
            self.state = 54
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if _la==38:
                self.state = 53
                self.paramList()


            self.state = 56
            self.match(StreamLangParser.RPAREN)
            self.state = 57
            self.match(StreamLangParser.ARROW)
            self.state = 58
            self.type_()
            self.state = 59
            self.block()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamListContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def param(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StreamLangParser.ParamContext)
            else:
                return self.getTypedRuleContext(StreamLangParser.ParamContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(StreamLangParser.COMMA)
            else:
                return self.getToken(StreamLangParser.COMMA, i)

        def getRuleIndex(self):
            return StreamLangParser.RULE_paramList

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParamList" ):
                listener.enterParamList(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParamList" ):
                listener.exitParamList(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParamList" ):
                return visitor.visitParamList(self)
            else:
                return visitor.visitChildren(self)




    def paramList(self):

        localctx = StreamLangParser.ParamListContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_paramList)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 61
            self.param()
            self.state = 66
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==18:
                self.state = 62
                self.match(StreamLangParser.COMMA)
                self.state = 63
                self.param()
                self.state = 68
                self._errHandler.sync(self)
                _la = self._input.LA(1)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ParamContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(StreamLangParser.ID, 0)

        def COLON(self):
            return self.getToken(StreamLangParser.COLON, 0)

        def type_(self):
            return self.getTypedRuleContext(StreamLangParser.TypeContext,0)


        def getRuleIndex(self):
            return StreamLangParser.RULE_param

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterParam" ):
                listener.enterParam(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitParam" ):
                listener.exitParam(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitParam" ):
                return visitor.visitParam(self)
            else:
                return visitor.visitChildren(self)




    def param(self):

        localctx = StreamLangParser.ParamContext(self, self._ctx, self.state)
        self.enterRule(localctx, 8, self.RULE_param)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 69
            self.match(StreamLangParser.ID)
            self.state = 70
            self.match(StreamLangParser.COLON)
            self.state = 71
            self.type_()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class TypeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser


        def getRuleIndex(self):
            return StreamLangParser.RULE_type

     
        def copyFrom(self, ctx:ParserRuleContext):
            super().copyFrom(ctx)



    class GenericTypeContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a StreamLangParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(StreamLangParser.ID, 0)
        def LT(self):
            return self.getToken(StreamLangParser.LT, 0)
        def type_(self):
            return self.getTypedRuleContext(StreamLangParser.TypeContext,0)

        def GT(self):
            return self.getToken(StreamLangParser.GT, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterGenericType" ):
                listener.enterGenericType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitGenericType" ):
                listener.exitGenericType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitGenericType" ):
                return visitor.visitGenericType(self)
            else:
                return visitor.visitChildren(self)


    class BaseTypeContext(TypeContext):

        def __init__(self, parser, ctx:ParserRuleContext): # actually a StreamLangParser.TypeContext
            super().__init__(parser)
            self.copyFrom(ctx)

        def ID(self):
            return self.getToken(StreamLangParser.ID, 0)

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBaseType" ):
                listener.enterBaseType(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBaseType" ):
                listener.exitBaseType(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBaseType" ):
                return visitor.visitBaseType(self)
            else:
                return visitor.visitChildren(self)



    def type_(self):

        localctx = StreamLangParser.TypeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 10, self.RULE_type)
        try:
            self.state = 79
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,4,self._ctx)
            if la_ == 1:
                localctx = StreamLangParser.BaseTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 1)
                self.state = 73
                self.match(StreamLangParser.ID)
                pass

            elif la_ == 2:
                localctx = StreamLangParser.GenericTypeContext(self, localctx)
                self.enterOuterAlt(localctx, 2)
                self.state = 74
                self.match(StreamLangParser.ID)
                self.state = 75
                self.match(StreamLangParser.LT)
                self.state = 76
                self.type_()
                self.state = 77
                self.match(StreamLangParser.GT)
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatementContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def varDecl(self):
            return self.getTypedRuleContext(StreamLangParser.VarDeclContext,0)


        def assignStmt(self):
            return self.getTypedRuleContext(StreamLangParser.AssignStmtContext,0)


        def ifExpr(self):
            return self.getTypedRuleContext(StreamLangParser.IfExprContext,0)


        def whileStmt(self):
            return self.getTypedRuleContext(StreamLangParser.WhileStmtContext,0)


        def breakStmt(self):
            return self.getTypedRuleContext(StreamLangParser.BreakStmtContext,0)


        def forStmt(self):
            return self.getTypedRuleContext(StreamLangParser.ForStmtContext,0)


        def block(self):
            return self.getTypedRuleContext(StreamLangParser.BlockContext,0)


        def returnStmt(self):
            return self.getTypedRuleContext(StreamLangParser.ReturnStmtContext,0)


        def exprStmt(self):
            return self.getTypedRuleContext(StreamLangParser.ExprStmtContext,0)


        def getRuleIndex(self):
            return StreamLangParser.RULE_statement

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterStatement" ):
                listener.enterStatement(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitStatement" ):
                listener.exitStatement(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStatement" ):
                return visitor.visitStatement(self)
            else:
                return visitor.visitChildren(self)




    def statement(self):

        localctx = StreamLangParser.StatementContext(self, self._ctx, self.state)
        self.enterRule(localctx, 12, self.RULE_statement)
        try:
            self.state = 90
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,5,self._ctx)
            if la_ == 1:
                self.enterOuterAlt(localctx, 1)
                self.state = 81
                self.varDecl()
                pass

            elif la_ == 2:
                self.enterOuterAlt(localctx, 2)
                self.state = 82
                self.assignStmt()
                pass

            elif la_ == 3:
                self.enterOuterAlt(localctx, 3)
                self.state = 83
                self.ifExpr()
                pass

            elif la_ == 4:
                self.enterOuterAlt(localctx, 4)
                self.state = 84
                self.whileStmt()
                pass

            elif la_ == 5:
                self.enterOuterAlt(localctx, 5)
                self.state = 85
                self.breakStmt()
                pass

            elif la_ == 6:
                self.enterOuterAlt(localctx, 6)
                self.state = 86
                self.forStmt()
                pass

            elif la_ == 7:
                self.enterOuterAlt(localctx, 7)
                self.state = 87
                self.block()
                pass

            elif la_ == 8:
                self.enterOuterAlt(localctx, 8)
                self.state = 88
                self.returnStmt()
                pass

            elif la_ == 9:
                self.enterOuterAlt(localctx, 9)
                self.state = 89
                self.exprStmt()
                pass


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class IfExprContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(StreamLangParser.IF, 0)

        def expr(self):
            return self.getTypedRuleContext(StreamLangParser.ExprContext,0)


        def block(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(StreamLangParser.BlockContext)
            else:
                return self.getTypedRuleContext(StreamLangParser.BlockContext,i)


        def ELSE(self):
            return self.getToken(StreamLangParser.ELSE, 0)

        def getRuleIndex(self):
            return StreamLangParser.RULE_ifExpr

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterIfExpr" ):
                listener.enterIfExpr(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitIfExpr" ):
                listener.exitIfExpr(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitIfExpr" ):
                return visitor.visitIfExpr(self)
            else:
                return visitor.visitChildren(self)




    def ifExpr(self):

        localctx = StreamLangParser.IfExprContext(self, self._ctx, self.state)
        self.enterRule(localctx, 14, self.RULE_ifExpr)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 92
            self.match(StreamLangParser.IF)
            self.state = 93
            self.expr(0)
            self.state = 94
            self.block()
            self.state = 97
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 95
                self.match(StreamLangParser.ELSE)
                self.state = 96
                self.block()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ReturnStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def SEMI(self):
            return self.getToken(StreamLangParser.SEMI, 0)

        def expr(self):
            return self.getTypedRuleContext(StreamLangParser.ExprContext,0)


        def getRuleIndex(self):
            return StreamLangParser.RULE_returnStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterReturnStmt" ):
                listener.enterReturnStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitReturnStmt" ):
                listener.exitReturnStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitReturnStmt" ):
                return visitor.visitReturnStmt(self)
            else:
                return visitor.visitChildren(self)




    def returnStmt(self):

        localctx = StreamLangParser.ReturnStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 16, self.RULE_returnStmt)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 99
            self.match(StreamLangParser.T__0)
            self.state = 101
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            if (((_la) & ~0x3f) == 0 and ((1 << _la) & 1924715846688) != 0):
                self.state = 100
                self.expr(0)


            self.state = 103
            self.match(StreamLangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class BreakStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def BREAK(self):
            return self.getToken(StreamLangParser.BREAK, 0)

        def SEMI(self):
            return self.getToken(StreamLangParser.SEMI, 0)

        def getRuleIndex(self):
            return StreamLangParser.RULE_breakStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterBreakStmt" ):
                listener.enterBreakStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitBreakStmt" ):
                listener.exitBreakStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitBreakStmt" ):
                return visitor.visitBreakStmt(self)
            else:
                return visitor.visitChildren(self)




    def breakStmt(self):

        localctx = StreamLangParser.BreakStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 18, self.RULE_breakStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 105
            self.match(StreamLangParser.BREAK)
            self.state = 106
            self.match(StreamLangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class VarDeclContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(StreamLangParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(StreamLangParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(StreamLangParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(StreamLangParser.SEMI, 0)

        def LET(self):
            return self.getToken(StreamLangParser.LET, 0)

        def VAR(self):
            return self.getToken(StreamLangParser.VAR, 0)

        def getRuleIndex(self):
            return StreamLangParser.RULE_varDecl

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterVarDecl" ):
                listener.enterVarDecl(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitVarDecl" ):
                listener.exitVarDecl(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitVarDecl" ):
                return visitor.visitVarDecl(self)
            else:
                return visitor.visitChildren(self)




    def varDecl(self):

        localctx = StreamLangParser.VarDeclContext(self, self._ctx, self.state)
        self.enterRule(localctx, 20, self.RULE_varDecl)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 108
            _la = self._input.LA(1)
            if not(_la==3 or _la==4):
                self._errHandler.recoverInline(self)
            else:
                self._errHandler.reportMatch(self)
                self.consume()
            self.state = 109
            self.match(StreamLangParser.ID)
            self.state = 110
            self.match(StreamLangParser.ASSIGN)
            self.state = 111
            self.expr(0)
            self.state = 112
            self.match(StreamLangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class AssignStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(StreamLangParser.ID, 0)

        def ASSIGN(self):
            return self.getToken(StreamLangParser.ASSIGN, 0)

        def expr(self):
            return self.getTypedRuleContext(StreamLangParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(StreamLangParser.SEMI, 0)

        def getRuleIndex(self):
            return StreamLangParser.RULE_assignStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterAssignStmt" ):
                listener.enterAssignStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitAssignStmt" ):
                listener.exitAssignStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitAssignStmt" ):
                return visitor.visitAssignStmt(self)
            else:
                return visitor.visitChildren(self)




    def assignStmt(self):

        localctx = StreamLangParser.AssignStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 22, self.RULE_assignStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 114
            self.match(StreamLangParser.ID)
            self.state = 115
            self.match(StreamLangParser.ASSIGN)
            self.state = 116
            self.expr(0)
            self.state = 117
            self.match(StreamLangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ExprStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def expr(self):
            return self.getTypedRuleContext(StreamLangParser.ExprContext,0)


        def SEMI(self):
            return self.getToken(StreamLangParser.SEMI, 0)

        def getRuleIndex(self):
            return StreamLangParser.RULE_exprStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterExprStmt" ):
                listener.enterExprStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitExprStmt" ):
                listener.exitExprStmt(self)

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitExprStmt" ):
                return visitor.visitExprStmt(self)
            else:
                return visitor.visitChildren(self)




    def exprStmt(self):

        localctx = StreamLangParser.ExprStmtContext(self, self._ctx, self.state)
        self.enterRule(localctx, 24, self.RULE_exprStmt)
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 119
            self.expr(0)
            self.state = 120
            self.match(StreamLangParser.SEMI)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class WhileStmtContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(StreamLangParser.WHILE, 0)

        def LPAREN(self):
            return self.getToken(StreamLangParser.LPAREN, 0)

        def expr(self):
            return self.getTypedRuleContext(StreamLangParser.ExprContext,0)


        def RPAREN(self):
            return self.getToken(StreamLangParser.RPAREN, 0)

        def block(self):
            return self.getTypedRuleContext(StreamLangParser.BlockContext,0)


        def getRuleIndex(self):
            return StreamLangParser.RULE_whileStmt

        def enterRule(self, listener:ParseTreeListener):
            if hasattr( listener, "enterWhileStmt" ):
                listener.enterWhileStmt(self)

        def exitRule(self, listener:ParseTreeListener):
            if hasattr( listener, "exitWhileStmt" ):
                listener.exitWhileStmt(self)
